Jekyll pre-theme

--- a/css/main.css
+++ b/css/main.css
@@ -29,25 +29,6 @@ a         { color: #00a; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
 
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
-ul.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
-}
-
-ul.posts li {
-  line-height: 1.75em;
-}
-
-ul.posts span {
-  color: #aaa;
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 80%;
-}
 
 /*****************************************************************************/
 /*
@@ -128,33 +109,33 @@ ul.posts span {
 /*****************************************************************************/
 
 /* standard */
-.post pre {
+.page pre {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
 }
 
-.post ul, .post ol {
+.page ul, .page ol {
   margin-left: 1.35em;
 }
 
-.post code {
+.page code {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .2em;
 }
 
-.post pre code {
+.page pre code {
   border: none;
 }
 
 /* terminal */
-.post pre.terminal {
+.page pre.terminal {
   border: 1px solid #000;
   background-color: #333;
   color: #FFF;
 }
 
-.post pre.terminal code {
+.page pre.terminal code {
   background-color: #333;
 }
