--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <a class="extra" href="/">home</a>
             </div>
-
+            <div class='page'>
                 {{ content }}
-
+            </div>
             <div class="footer">
               <div class="contact">
                 <p>
